[package]
name = "noob_slam"
version = "0.1.0"
edition = "2024"

[dependencies]
noob_slam_lib = { path = "./noob_slam_lib" }
noob_slam_gen = { path = "./noob_slam_gen" }
noob_slam_plt = { path = "./noob_slam_plt" }
plotters = "0.3.7"

[workspace]
members = [ "noob_slam_gen", "noob_slam_lib", "noob_slam_plt" ]

[[test]]
name = "noob_slam_bench"
path = "bench/mod.rs"
